# InternVideo

InternVideo1/Pretrain/ViCLIP/: demo1.ipynb  viclip.yaml
InternVideo1/Pretrain/ViCLIP/demo/: viclip.py  viclip_text.py  viclip_vision.py
InternVideo2/multi_modality/: demo1.ipynb  pre-requirements.txt  requirements.txt
InternVideo2/multi_modality/demo/: .gitignore  utils.py
InternVideo2/package/: pyproject.toml
InternVideo2/package/internvideo2_multi_modality/models/: __init__.py
InternVideo2/single_modality/: requirements.txt
